add /units/by-type endpoint